--- a/base.css
+++ b/base.css
@@ -30,14 +30,22 @@ html {
     mix-blend-mode: unset !important;
 }
 
-    .cursor.play .cursor__inner--dot .icon {
-        display: unset !important;
-    }
+.cursor.play .cursor__inner--dot .icon {
+    display: unset !important;
+}
+
 
 .cursor.play .cursor__inner--circle {
     background-color: #F4D16F;
     border-color: #F4D16F;
     /*mix-blend-mode: unset !important;*/
+}
+
+.cursor.grow .cursor__inner--circle {
+    width: 54px;
+    height: 54px;
+    margin-left: -17px;
+    margin-top: -17px;
 }
 
 .cursor__inner--dot {
@@ -58,6 +66,9 @@ html {
     width: 20px;
     height: 20px;
     border: 1px solid #F4D16F;
+    -webkit-transition: width 0.1s ease, height 0.1s ease, margin 0.3s ease;
+    -moz-transition: width 0.3s ease, height 0.3s ease, margin 0.3s ease;
+    transition: width 0.3s ease, height 0.3s ease, margin 0.3s ease;
 }
 
 /* Page Loader */
@@ -484,7 +495,7 @@ a:focus {
         flex-direction: row-reverse;
     }
 	.slideshow {
-		width: 100vw;
+		width: 100%;
 		height: 100vh;
 		position: relative;
 	}
@@ -514,40 +525,40 @@ a:focus {
 	.slide__text { grid-row-end: span 7; grid-column-end: span 6; }
 	.slide__figure--main { grid-row-start: 1; grid-row-end: span 20; grid-column-end: span 7; }
     
-	.slide--layout-1 .slide__figure--main { grid-column-start: 11;}
+	.slide--layout-1 .slide__figure--main { grid-column-start: 10;}
 	.slide--layout-1 .slide__figure:nth-child(2) {grid-row-start: 1; grid-column-start: 8;}
 	.slide--layout-1 .slide__figure:nth-child(3) {grid-row-start: 16; grid-column-start: 18;}
 	.slide--layout-1 .slide__figure:nth-child(4) {grid-row-start: 16; grid-column-start: 1; }
-	.slide--layout-1 .slide__title { grid-row-start: 5; grid-column-start: 7;}
-	.slide--layout-1 .slide__text { grid-row-start: 17; grid-column-start: 6;}
+	.slide--layout-1 .slide__title { grid-row-start: 5; grid-column-start: 5;}
+	.slide--layout-1 .slide__text { grid-row-start: 17; grid-column-start: 5;}
     
-	.slide--layout-2 .slide__figure--main {grid-column-start: 11;}
+	.slide--layout-2 .slide__figure--main {grid-column-start: 10;}
 	.slide--layout-2 .slide__figure:nth-child(2) {grid-row-start: 1; grid-column-start: 8;}
 	.slide--layout-2 .slide__figure:nth-child(3) {grid-row-start: 16; grid-column-start: 18;}
 	.slide--layout-2 .slide__figure:nth-child(4) {grid-row-start: 16; grid-column-start: 1; }
-	.slide--layout-2 .slide__title { grid-row-start: 5; grid-column-start: 7;}
-	.slide--layout-2 .slide__text { grid-row-start: 17; grid-column-start: 6;}
+	.slide--layout-2 .slide__title { grid-row-start: 5; grid-column-start: 5;}
+	.slide--layout-2 .slide__text { grid-row-start: 17; grid-column-start: 5;}
     
-	.slide--layout-3 .slide__figure--main {grid-column-start: 11;}
+	.slide--layout-3 .slide__figure--main {grid-column-start: 10;}
 	.slide--layout-3 .slide__figure:nth-child(2) {grid-row-start: 1; grid-column-start: 8;}
 	.slide--layout-3 .slide__figure:nth-child(3) {grid-row-start: 16; grid-column-start: 18;}
 	.slide--layout-3 .slide__figure:nth-child(4) {grid-row-start: 16; grid-column-start: 1; }
-	.slide--layout-3 .slide__title { grid-row-start: 4; grid-column-start: 7;}
-	.slide--layout-3 .slide__text { grid-row-start: 17; grid-column-start: 6;}
+	.slide--layout-3 .slide__title { grid-row-start: 4; grid-column-start: 5;}
+	.slide--layout-3 .slide__text { grid-row-start: 17; grid-column-start: 5;}
     
-	.slide--layout-4 .slide__figure--main {grid-column-start: 11;}
+	.slide--layout-4 .slide__figure--main {grid-column-start: 10;}
 	.slide--layout-4 .slide__figure:nth-child(2) {grid-row-start: 1; grid-column-start: 8;}
 	.slide--layout-4 .slide__figure:nth-child(3) {grid-row-start: 16; grid-column-start: 18;}
 	.slide--layout-4 .slide__figure:nth-child(4) {grid-row-start: 16; grid-column-start: 1; }
-	.slide--layout-4 .slide__title { grid-row-start: 5; grid-column-start: 7;}
-	.slide--layout-4 .slide__text { grid-row-start: 17; grid-column-start: 6;}
+	.slide--layout-4 .slide__title { grid-row-start: 5; grid-column-start: 5;}
+	.slide--layout-4 .slide__text { grid-row-start: 17; grid-column-start: 5;}
     
-	.slide--layout-5 .slide__figure--main {grid-column-start: 11;}
+	.slide--layout-5 .slide__figure--main {grid-column-start: 10;}
 	.slide--layout-5 .slide__figure:nth-child(2) {grid-row-start: 1; grid-column-start: 8;}
 	.slide--layout-5 .slide__figure:nth-child(3) {grid-row-start: 16; grid-column-start: 18;}
 	.slide--layout-5 .slide__figure:nth-child(4) {grid-row-start: 16; grid-column-start: 1; }
-	.slide--layout-5 .slide__title { grid-row-start: 4; grid-column-start: 7;}
-	.slide--layout-5 .slide__text { grid-row-start: 17; grid-column-start: 6;}
+	.slide--layout-5 .slide__title { grid-row-start: 4; grid-column-start: 5;}
+	.slide--layout-5 .slide__text { grid-row-start: 17; grid-column-start: 5;}
 
 
 	/*.slide--layout-2 .slide__figure--main {grid-column-start: 3;}
