--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿/*!
+/*!
  * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
@@ -5547,16 +5547,17 @@ body {
       line-height: 38px;
       position: absolute;
       top: 40%;
-      transform: translateY(-50%);
-      -webkit-transform: translateY(-200%);
       max-width: 768px;
-      text-align: center; }
+      text-align: center;
+      transform: translateY(-50%); }
       @media (min-width: 992px) {
         body .section-since p {
           font-size: 44px;
           line-height: 55px;
           top: 50%;
-          text-align: left; } }
+          text-align: left;
+          -webkit-transform: translateY(-200%);
+          -moz-transform: translateY(-50%); } }
   body .section-commitment {
     padding: 80px 0px 64px 0px; }
     @media (min-width: 992px) {
@@ -6034,7 +6035,7 @@ body {
     body .img-percent .source {
       font-family: 'Shippori Mincho B1', serif;
       font-weight: normal;
-      font-size: 13px;
+      font-size: 10px;
       line-height: 64px;
       color: #3B5440;
       display: inline-block;
