--- a/style.scss
+++ b/style.scss
@@ -495,6 +495,7 @@ body {
             }
         }
     }
+
     .frame {
         display: none;
 
@@ -628,6 +629,7 @@ body {
             background-position: center;
         }
     }
+
     span.yellow {
         color: #F4D16F;
     }
@@ -702,6 +704,7 @@ body {
             }
         }
     }
+
     .circles-container {
         margin-bottom: 75px;
         display: flex;
@@ -1107,6 +1110,7 @@ body {
             animation: animateCircle31 1.8s linear forwards
         }
     }
+
     .section-hero {
         position: relative;
         height: 100vh;
@@ -1307,16 +1311,17 @@ body {
             line-height: 38px;
             position: absolute;
             top: 40%;
-            transform: translateY(-50%);
-            -webkit-transform: translateY(-200%);
             max-width: 768px;
             text-align: center;
+            transform: translateY(-50%);
 
             @include mq(desktop) {
                 font-size: 44px;
                 line-height: 55px;
                 top: 50%;
                 text-align: left;
+                -webkit-transform: translateY(-200%);
+                -moz-transform: translateY(-50%);
             }
         }
     }
@@ -1491,6 +1496,7 @@ body {
                         width: 20%;
                     }
                 }
+
                 p {
                     font-weight: normal;
                     font-size: 14px;
@@ -1689,7 +1695,6 @@ body {
         }
 
         .barra-nivel {
-            
             background: linear-gradient(90deg, rgba(61,85,64,1) 0%, rgba(89,105,61,1) 100%);
             width: 1px;
             height: 84px;
@@ -1996,7 +2001,7 @@ body {
         .source {
             font-family: 'Shippori Mincho B1', serif;
             font-weight: normal;
-            font-size: 13px;
+            font-size: 10px;
             line-height: 64px;
             color: #3B5440;
             display: inline-block;
@@ -2038,6 +2043,7 @@ body {
                 justify-content: center;
                 flex-direction: column;
                 width: 50%;
+
                 p {
                     height: 5rem;
                     font-weight: normal;
